exersice is done

--- a/GridProperty/start.css
+++ b/GridProperty/start.css
@@ -16,7 +16,11 @@ body {
 }
 
 #red {
-    grid-column: 3/5;
+    grid-column: 4/4;
+    /* padding-top: 50px; */
+    padding-left: 50px;
+    padding-right: 50px;
+   
 }
 
 #blue {
@@ -28,3 +32,8 @@ ul {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
+/* section#yellow, section#red {
+    display: grid;
+    grid-template-columns: 1fr;
+} */
